  "Culmus" LaTeX fonts are installed.

* Documents that use TeX fonts can only be compiled with XeTeX if the input
  encoding is set to "utf8-plain" or "ascii".

!!!The following pref variables were added in 2.4:

* \ct_additions_underlined true|false: determines whether additions in change tracking
  are underlined in the workarea (default: true).


!!!The following pref variables were changed in 2.4:



!!!The following pref variables are obsoleted in 2.4:

* \font_encoding
  The font encoding is now automatically set depending on the document
  fonts and languages.

* \use_qimage
  This is no longer necessary due to the rewrite of the painter.

* \use_pixmap_cacheqimage
  There is no evidence that this painting mode was useful anymore.

* \date_insert_format
  The function date-insert has been removed and superseded by info-insert date.
  The latter does not need a pref value anymore.


!!!The following new LyX functions have been introduced in 2.4:

* bidi is a helper function to implement icons that are different between LTR and RTL text. 

* buffer-reset-export advises LyX to remove the auxiliary files before doing the next
  export.

* buffer-write-as-template is a new convenience function to ease saving a document
  in the (personal) templates folder.

* export-cancel: Used to cancel background export processes.

* ifrelatives is a helper function to check whether a buffer has a master or children.

* master-buffer-forall executes an lfun in the master and all children of a document.

* paragraph-select is a new convenience function to select the paragraph
  surrounding the actual cursor position.

* tabular-style-insert: Insert a table in a specified style.


!!!The following LyX functions have been changed in 2.4:

* set-graphics-group was renamed to graphics-set-group.

* info-insert buffer vcs-*: renamed to info-insert vcs *

* file-insert: optional second parameter "ignorelang" to make the insertion