@@ -67,6 +67,7 @@ public:
 		RC_CONVERTER_CACHE_MAXAGE,
 		RC_COPIER,
 		RC_CT_ADDITIONS_UNDERLINED,
+		RC_CT_MARKUP_COPIED,
 		RC_CURSOR_FOLLOWS_SCROLLBAR,
 		RC_CURSOR_WIDTH,
 		RC_DEFAULT_DECIMAL_SEP,
@@ -421,6 +422,8 @@ public:
 	bool cursor_follows_scrollbar = false;
 	///
 	bool ct_additions_underlined = true;
+	///
+	bool ct_markup_copied = false;
 	///
 	bool scroll_below_document = false;
 	///
