@@ -1813,8 +1813,9 @@ bool Text::dissolveInset(Cursor & cur)
 		// but we'll try the cheaper solution here.
 		cur.buffer()->clearReferenceCache();
 
-		// Do not revive deleted text
-		lyx::acceptChanges(plist, b.params());
+		if (!lyxrc.ct_markup_copied)
+			// Do not revive deleted text
+			lyx::acceptChanges(plist, b.params());
 
 		// ERT paragraphs have the Language latex_language.
 		// This is invalid outside of ERT, so we need to
