@@ -35,6 +35,9 @@
 * \ct_additions_underlined true|false: determines whether additions in change tracking
   are underlined in the workarea (default: true).
 
+* \ct_markup_copied true|false: determines whether change tracking markup should be
+  preserved on copy/paste (default: false).
+
 
 !!!The following pref variables were changed in 2.4:
 
